--- a/assets/stylesheets/global.scss
+++ b/assets/stylesheets/global.scss
@@ -1,3 +1,7 @@
+* {
+    margin:0px;
+    padding:0px;
+}
 img {
     width:100%;
     height:100%;
@@ -5,4 +9,21 @@ img {
 }
 body {
     font-family: Arial, Helvetica, sans-serif;
+    overflow:hidden;
+}
+.main {
+    display:flex;
+    max-width:100%;
+    flex: 1 0 auto;
+}
+.grid {
+    display:grid;
+    grid-template-columns: auto;
+
+    &--two-column {
+        grid-template-columns: 1fr 1fr;
+    }
+    &--two-row {
+        grid-template-rows:1fr 1fr;
+    }
 }
