--- a/assets/style/global.scss
+++ b/assets/style/global.scss
@@ -1,29 +1,6 @@
-* {
-    margin:0px;
-    padding:0px;
-}
-img {
-    width:100%;
-    height:100%;
-    object-fit:cover;
-}
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    overflow:hidden;
-}
-.main {
-    display:flex;
-    max-width:100%;
-    flex: 1 0 auto;
-}
 .grid {
     display:grid;
-    grid-template-columns: auto;
-
-    &--two-column {
-        grid-template-columns: 1fr 1fr;
-    }
-    &--two-row {
-        grid-template-rows:1fr 1fr;
+    &--default {
+        grid-template-columns:1fr;
     }
 }
