--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -1,3 +1,22 @@
+* {
+    margin:0px;
+    padding:0px;
+}
+img {
+    width:100%;
+    height:100%;
+    object-fit:cover;
+}
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    overflow:hidden;
+}
+.main {
+    display:flex;
+    max-width:100%;
+    flex: 1 0 auto;
+}
+
 img {
     width:100%;
     height:100%;
